<resources>
    <string name="app_name">GloApp</string>
    <string name="skin_test">Skin test</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="timeline">Timeline</string>
    <string name="store">Store</string>
    <string name="halaman_utama">Halaman Utama</string>
    <string name="failed_capture">Failed to capture photo.</string>
    <string name="failed_camera">Failed to open camera</string>
    <string name="take_photo">TAKE PHOTO</string>
    <string name="gallery">GALLERY</string>
    <string name="diagnose_report">Laporan Analisis Penyakit</string>
    <string name="Description">Deskripsi</string>
    <string name="cause">Penyebab</string>
    <string name="prevention">Cara Pencegahan</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disease_picture">Foto penyakit</string>
    <string name="accuracy">Accuracy: %s%%</string>
    <string name="send_message">Send message</string>
    <string name="experience">Experience</string>
    <string name="about_doctor">About Doctor</string>
    <string name="working_time">Working time</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="consultation_fee">Consultation fee</string>
    <string name="experience_value">%d Years</string>
    <string name="consultation_fee_value">Rp %d</string>
    <string name="doctors">doctors</string>
    <string name="error_email">Enter a correct email format</string>\
    <string name="error_password">Password must have more than 5 characters</string>
    <string name="hint_email">Enter email</string>
    <string name="hint_password">Enter password</string>
    <string name="hint_name">Enter name</string>
    <string name="label_password">Password</string>
    <string name="label_email">Email</string>
    <string name="label_name">Name</string>
    <string name="tv_register">Register</string>
    <string name="already_have_account">Already have account?</string>
    <string name="tv_logout">Logout</string>
    <string name="tv_login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_phone">Phone</string>
    <string name="phone_hint">Enter phone number</string>
    <string name="register_now">Register now</string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="error_empty_field">Must not be empty</string>
    <string name="login_success">Login success</string>
    <string name="failed_login">Login failed</string>
    <string name="success_reg">Registration success</string>
    <string name="failed_regis">Registration failed</string>
    <string name="logout">Logout</string>
    <string name="profile_capital">PROFILE</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
</resources>