<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/super_light_brown">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.activities.main.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rectangle"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/diagnose_report"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgDiseasePhoto"
                android:layout_width="240dp"
                android:layout_height="280dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                android:contentDescription="@string/disease_picture"
                android:layout_marginTop="16dp"
                tools:src="@drawable/ic_launcher_background"/>

            <TextView
                android:id="@+id/tvDiseaseDiagnose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_marginHorizontal="16dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                tools:text="Jerawat"/>

            <TextView
                android:id="@+id/tvAccuracy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:text="@string/accuracy"
                tools:text="Accuracy: 99.8%"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/Description"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/tvDiseaseDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit."
                android:textSize="16sp"
                android:layout_marginHorizontal="32dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cause"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/tvDiseaseCause"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit. "
                android:textSize="16sp"
                android:layout_marginHorizontal="32dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prevention"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/tvDiseasePrevention"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit. "
                android:textSize="16sp"
                android:layout_marginHorizontal="32dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disclaimer"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/tvDiseaseDisclaimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. "
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginHorizontal="32dp"
                android:layout_marginBottom="16dp"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnHomeScreenFromDisease"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:text="@string/halaman_utama"
            android:backgroundTint="@color/brown"
            android:layout_marginBottom="16dp" />

    </LinearLayout>

</ScrollView>
